--- a/admin/app/view/user/add.html
+++ b/admin/app/view/user/add.html
@@ -51,7 +51,7 @@
         <div class="layui-form-item">
             <label class="layui-form-label">商户站点：</label>
             <div class="layui-input-block">
-                <input type="text" name="siteurl" placeholder="请输入商户站点" autocomplete="off" class="layui-input">
+                <input type="text" name="siteurl" lay-verify="url" placeholder="请输入商户站点" autocomplete="off" class="layui-input">
             </div>
         </div>
         <div class="layui-form-item">
