--- a/admin/app/view/user/index.html
+++ b/admin/app/view/user/index.html
@@ -55,8 +55,8 @@
                 <td class="hidden-xs">{$vo.phone}</td>
                 <td class="hidden-xs">{$vo.qq}</td>
                 <td class="hidden-xs"><button class="layui-btn layui-btn-mini layui-btn-{$vo.is_agent == 1?'success':'warm'}" >{$vo.is_agent == 1?'是':'否'}</button></td>
-                <td class="hidden-xs"><button class="layui-btn layui-btn-mini layui-btn-{$vo.is_verify == 1?'success':'warm'}">{$vo.is_agent == 1?'是':'否'}</button></td>
-                <td><button class="layui-btn layui-btn-mini layui-btn-normal table-list-status" data-status='{$vo.status}'>正常</button></td>
+                <td class="hidden-xs"><button class="layui-btn layui-btn-mini layui-btn-{$vo.is_verify == 1?'success':'warm'}">{$vo.is_verify == 1?'是':'否'}</button></td>
+                <td><button class="layui-btn layui-btn-mini layui-btn-{$vo.status == 1?'success':'warm'} table-list-status" data-id="{$vo.uid}" data-status='{$vo.status}'>{$vo.status == 1?'可用':'禁用'}</button></td>
                 <td class="hidden-xs">{$vo.create_time}</td>
                 <td class="hidden-xs">{$vo.update_time}</td>
                 <td>
@@ -69,42 +69,38 @@
             {/volist}
             </tbody>
         </table>
+        <div class="page-wrap">
+            {$list->render()}
+        </div>
     </div>
 </div>
 <script src="__STATIC__/layui/layui.js" type="text/javascript" charset="utf-8"></script>
+
 <script src="__STATIC__/js/common.js" type="text/javascript" charset="utf-8"></script>
 <script>
-    layui.use(['form', 'jquery', 'layer', 'laydate'], function() {
-        var laydate = layui.laydate,
-            $ = layui.jquery;
+    layui.use(['form', 'jquery', 'layer', 'laydate','laypage'], function() {
+        var $ = layui.jquery;
+
         //修改状态
         $('#table-list').on('click', '.table-list-status', function() {
             var That = $(this);
             var status = That.attr('data-status');
-            var id = That.parent().attr('data-id');
-            if(status == 1) {
-                That.removeClass('layui-btn-normal').addClass('layui-btn-warm').html('禁用').attr('data-status', 2);
-                //处理禁用操作
-            } else if(status == 2) {
-                That.removeClass('layui-btn-warm').addClass('layui-btn-normal').html('正常').attr('data-status', 1);
-                //处理可用操作
-
-            }
-        })
-
-        //查看参数
-        $('#table-list').on('click', '.table-list-param', function() {
-
-            var That = $(this);
             var id = That.attr('data-id');
-            $.ajax({
-                url:'/channel/getParam/id/'+id,
-                success:function (res) {
+            //提交修改
+            $.post("{:url('user/changeStatus')}",{id:id,status:status},function (res) {
+                    if (res.code == 1){
+                        if(status == 1) {
+                            That.removeClass('layui-btn-success').addClass('layui-btn-warm').html('禁用').attr('data-status', 0);
 
-                    layer.alert(res)
+                        }else{
+                            That.removeClass('layui-btn-warm').addClass('layui-btn-success').html('可用').attr('data-status', 1);
+                        }
+                    }
+                    layer.alert(res.msg,{title: "修改状态", btn: ['确定']});
                 }
-            });
-        })
+            );
+            return false;
+        });
 
     });
 </script>
