--- a/admin/app/view/channel/edit.html
+++ b/admin/app/view/channel/edit.html
@@ -12,29 +12,29 @@
 <body>
 <div class="wrap-container">
     <form class="layui-form" style="width: 90%;padding-top: 20px;">
+        <input name="id" disabled hidden="hidden" value="{$channel.id}">
         <div class="layui-form-item">
             <label class="layui-form-label">渠道名称：</label>
             <div class="layui-input-block">
                 <select name="name" lay-verify="required">
-                    <option value="wx_scan">wx_scan</option>
-                    <option value="qq_scan">qq_scan</option>
-                    <option value="ali_web">ali_web</option>
-                    <option value="ali_wap">ali_wap</option>
-                    <option value="ali_wap">ali_scan</option>
-
+                    <option {$channel.name|default='null' == 'wx_scan'? 'selected':'' } value="wx_scan">wx_scan</option>
+                    <option {$channel.name|default='null' == 'qq_scan'? 'selected':'' } value="qq_scan">qq_scan</option>
+                    <option {$channel.name|default='null' == 'ali_web'? 'selected':'' } value="ali_web">ali_web</option>
+                    <option {$channel.name|default='null' == 'ali_wap'? 'selected':'' } value="ali_wap">ali_wap</option>
+                    <option {$channel.name|default='null' == 'ali_scan'? 'selected':'' } value="ali_wap">ali_scan</option>
                 </select>
             </div>
         </div>
         <div class="layui-form-item">
             <label class="layui-form-label">费率：</label>
             <div class="layui-input-inline">
-                <input type="text" name="rate" required lay-verify="required" placeholder="请输入渠道费率" autocomplete="off" class="layui-input" value="">
+                <input type="text" name="rate" required lay-verify="required" placeholder="请输入渠道费率" autocomplete="off" class="layui-input" value="{$channel.rate|default='0.06'}">
             </div>
         </div>
         <div class="layui-form-item">
             <label class="layui-form-label">日限额：</label>
             <div class="layui-input-inline">
-                <input type="text" name="daily" required lay-verify="required" placeholder="请输入渠道日限额" autocomplete="off" class="layui-input" value="">
+                <input type="text" name="daily" required lay-verify="required" placeholder="请输入渠道日限额" autocomplete="off" class="layui-input" value="{$channel.daily|default='20000'}">
             </div>
         </div>
         <div class="layui-form-item layui-form-text">
@@ -48,20 +48,20 @@
         <div class="layui-form-item">
             <label class="layui-form-label">状态：</label>
             <div class="layui-input-inline">
-                <input type="radio" name="status" value="1" title="启用" checked>
-                <input type="radio" name="status" value="0" title="禁用">
+                <input type="radio" name="status" value="1" title="启用" {$channel.status == 1?'checked':''}>
+                <input type="radio" name="status" value="0" title="禁用" {$channel.status == 0?'checked':''}>
             </div>
         </div>
 
         <div class="layui-form-item">
             <label class="layui-form-label">备注：</label>
             <div class="layui-input-block">
-                <input type="text" name="remark" required placeholder="请输入备注" autocomplete="off" class="layui-input" value="">
+                <input type="text" name="remark" required placeholder="请输入备注" autocomplete="off" class="layui-input" value="{$channel.remark|default=''}">
             </div>
         </div>
         <div class="layui-form-item">
             <div class="layui-input-block">
-                <button class="layui-btn layui-btn-normal" lay-submit lay-filter="addChannel">立即提交</button>
+                <button class="layui-btn layui-btn-normal" lay-submit lay-filter="editChannel">立即提交</button>
                 <button type="reset" class="layui-btn layui-btn-primary">重置</button>
             </div>
         </div>
@@ -76,8 +76,8 @@
             $ = layui.jquery;
         form.render();
         //全选
-        form.on('submit(addChannel)', function(data) {
-            $.post("{:url('Channel/add')}",data.field,function (res) {
+        form.on('submit(editChannel)', function(data) {
+            $.post("{:url('Channel/edit')}",data.field,function (res) {
                     if (res.code == 1){
                         layer.alert(res.msg);
                     }
