--- a/admin/app/view/index/index.html
+++ b/admin/app/view/index/index.html
@@ -42,9 +42,8 @@
                 </a>
             </div>
             <ul class="layui-nav" lay-filter="rightNav">
-                <li class="layui-nav-item"><a href="javascript:;" data-url="email.html" data-id='4' data-text="邮件系统"><i class="iconfont">&#xe603;</i></a></li>
                 <li class="layui-nav-item">
-                    <a href="javascript:;" data-url="admin-info.html" data-id='5' data-text="个人信息">小朱</a>
+                    <a href="javascript:;" data-url="{:url('admin/profile')}" data-id="{$Think.session.admin_info.id|default='999'}" data-text="个人信息">{$Think.session.admin_info.nickname|default='管理员'}</a>
                 </li>
                 <li class="layui-nav-item"><a href="javascript:;">退出</a></li>
             </ul>
