--- a/admin/app/view/menu/add.html
+++ b/admin/app/view/menu/add.html
@@ -5,21 +5,20 @@
     <meta name="renderer" content="webkit">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
-    <title>后台菜单编辑</title>
+    <title>后台菜单添加</title>
     <link rel="stylesheet" type="text/css" href="__STATIC__/layui/css/layui.css" />
     <link rel="stylesheet" type="text/css" href="__STATIC__/css/admin.css" />
 </head>
 <body>
 <div class="wrap-container">
     <form class="layui-form" action="" method="post" style="width: 90%;padding-top: 20px;">
-        <input name="id" value="{$menu.id}" disabled hidden>
         <div class="layui-form-item">
             <label class="layui-form-label">一级菜单：</label>
             <div class="layui-input-block">
                 <select name="pid" lay-verify="required">
                     <option value="0">作为一级菜单</option>
                     {volist name="father" id="vo"}
-                    <option {$menu.pid|default='0' == $vo.id ? 'selected':''} value="{$vo.id}">{$vo.name}</option>
+                    <option value="{$vo.id}">{$vo.name}</option>
                     {/volist}
                 </select>
             </div>
@@ -28,28 +27,28 @@
         <div class="layui-form-item">
             <label class="layui-form-label">名称：</label>
             <div class="layui-input-block">
-                <input type="text" name="name" value="{$menu['name']|default=''}" required lay-verify="required" placeholder="请输入名称" autocomplete="off" class="layui-input">
+                <input type="text" name="name" value="" required lay-verify="required" placeholder="请输入名称" autocomplete="off" class="layui-input">
             </div>
 
         </div>
         <div class="layui-form-item">
             <label class="layui-form-label">控制器：</label>
             <div class="layui-input-block">
-                <input type="text" name="controller" value="{$menu['controller']|default=''}" required lay-verify="required" placeholder="请输入控制器" autocomplete="off" class="layui-input">
+                <input type="text" name="controller" value="" required lay-verify="required" placeholder="请输入控制器" autocomplete="off" class="layui-input">
             </div>
 
         </div>
         <div class="layui-form-item">
             <label class="layui-form-label">方法：</label>
             <div class="layui-input-block">
-                <input type="text" name="action" value="{$menu['action']|default=''}" required lay-verify="required" placeholder="请输入方法" autocomplete="off" class="layui-input">
+                <input type="text" name="action" value="" required lay-verify="required" placeholder="请输入方法" autocomplete="off" class="layui-input">
             </div>
 
         </div>
-        <div class="layui-form-item" {$menu.level|default ='0' == 1? 'hidden':''}>
+        <div class="layui-form-item">
             <label class="layui-form-label">图标：</label>
             <div class="layui-input-block">
-                <input type="text" name="ico" value="{$menu['ico']|default='&#xe604;'}" placeholder="请输入图标" autocomplete="off" class="layui-input">
+                <input type="text" name="ico" value="&#xe604;" placeholder="请输入图标" autocomplete="off" class="layui-input">
             </div>
 
         </div>
@@ -73,8 +72,8 @@
                 <button type="reset" class="layui-btn layui-btn-primary">重置</button>
             </div>
         </div>
-    </form>
-</div>
+        </form>
+    </div>
 
 <script src="__STATIC__/layui/layui.js" type="text/javascript" charset="utf-8"></script>
 <script>
@@ -85,8 +84,8 @@
         form.render();
         //监听提交
         form.on('submit(formMenu)', function(data) {
-            $.post("{:url('menu/edit')}",data.field,function (res) {
-                   layer.alert(res.msg);
+            $.post("{:url('menu/add')}",data.field,function (res) {
+                    layer.alert(res.msg);
                 }
             );
             return false;
