:memo:提交版权，修复完善

--- a/admin/app/view/login/index.html
+++ b/admin/app/view/login/index.html
@@ -39,7 +39,7 @@
                 </div>
             </form>
         </div>
-        <p class="copyright">Copyright 2015-2016 by XIAODU</p>
+        <p class="copyright">余呗支付 © 2018 小红帽科技, Inc.</p>
     </div>
 </div>
 <script src="__STATIC__/layui/layui.js" type="text/javascript" charset="utf-8"></script>
